--- a/yarmolovichalex-cv/Views/Home/Index.cshtml
+++ b/yarmolovichalex-cv/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="container">
             <h3>Yarmolovich Alexander CV</h3>
             <p>
-                <a class="btn btn-primary btn-lg" href="/CV/cv.docx" role="button">Download .docx</a>
+                <a class="btn btn-primary btn-lg" href="@Path.Combine(Server.MapPath("~/CV"), "cv.docx")" role="button">Download .docx</a>
             </p>
         </div>
     </header>
