remote link to file

--- a/yarmolovichalex-cv/Views/Home/Index.cshtml
+++ b/yarmolovichalex-cv/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Hosting
-@{
+﻿@{
     Layout = null;
 }
 
@@ -19,7 +18,7 @@
         <div class="container">
             <h3>Yarmolovich Alexander CV</h3>
             <p>
-                <a class="btn btn-primary btn-lg" href="@Url.Action("DownloadCV", "Home")" role="button">Download .docx</a>
+                <a class="btn btn-primary btn-lg" href="http://gdurl.com/Rddh/download" role="button">Download .docx</a>
             </p>
         </div>
     </header>
