--- a/yarmolovichalex-cv/Views/Home/Index.cshtml
+++ b/yarmolovichalex-cv/Views/Home/Index.cshtml
@@ -27,10 +27,8 @@
             <div class="panel-group" id="accordion">
                 
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse-1" class="collapsed">Contacts</a>
-                        </h4>
+                    <div class="panel-heading collapsed" data-toggle="collapse" href="#collapse-1">
+                        <h4 class="panel-title">Contacts</h4>
                     </div>
                     <div id="collapse-1" class="panel-collapse collapse in">
                         <div class="panel-body">
@@ -45,10 +43,8 @@
                 </div>
                 
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse-2" class="collapsed">Objective</a>
-                        </h4>
+                    <div class="panel-heading collapsed" data-toggle="collapse" href="#collapse-2">
+                        <h4 class="panel-title">Objective</h4>
                     </div>
                     <div id="collapse-2" class="panel-collapse collapse in">
                         <div class="panel-body">
@@ -58,16 +54,14 @@
                 </div>
                 
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse-3" class="collapsed">Skills Summary</a>
-                        </h4>
+                    <div class="panel-heading collapsed" data-toggle="collapse" href="#collapse-3">
+                        <h4 class="panel-title">Skills Summary</h4>
                     </div>
                     <div id="collapse-3" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <ul>
                                 <li>
-                                    <strong>Backend</strong>
+                                    <strong>Back-end</strong>
                                     <ul>
                                         <li>C#</li>
                                         <li>ASP.NET (mainly MVC, but have experience with Web Forms)</li>
@@ -78,7 +72,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <strong>Frontend</strong>
+                                    <strong>Front-end</strong>
                                     <ul>
                                         <li>JavaScript (mainly jQuery)</li>
                                         <li>HTML, CSS (experience with Twitter Bootstrap)</li>
@@ -90,10 +84,8 @@
                 </div>
                 
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse-4" class="collapsed">Education</a>
-                        </h4>
+                    <div class="panel-heading collapsed" data-toggle="collapse" href="#collapse-4">
+                        <h4 class="panel-title">Education</h4>
                     </div>
                     <div id="collapse-4" class="panel-collapse collapse in">
                         <div class="panel-body">
@@ -103,22 +95,19 @@
                 </div>
                 
                 <div class="panel panel-primary">
-                    <div class="panel-heading">
-                        <h4 class="panel-title">
-                            <a data-toggle="collapse" href="#collapse-5" class="collapsed">Employment History</a>
-                        </h4>
+                    <div class="panel-heading collapsed" data-toggle="collapse" href="#collapse-5">
+                        <h4 class="panel-title">Employment History</h4>
                     </div>
-
                     <div id="collapse-5" class="panel-collapse collapse in">
                         <div class="panel-body">
                             <table class="table">
                                 <tr>
                                     <td>
                                         <div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
                                                 <img class="img-responsive" src="http://www.walletone.com/shared/service/page/380/w1.png" />
                                             </div>
-                                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
                                                 <p><em><strong>.NET Developer</strong></em></p>
                                                 <p><em>July 2013 - Present</em></p>
                                                 <p>
@@ -128,7 +117,15 @@
                                                 </p>
                                                 <strong>Responsibilities:</strong>
                                                 <ul>
-                                                    <li>Payment gateways development and support</li>
+                                                    <li>Payment gateways development and support. This includes:
+                                                        <ul>
+                                                            <li>Protocols analysis</li>
+                                                            <li>Negotiations with partner's technical specialists, sometimes in English</li>
+                                                            <li>Gateway implementation in ASP.NET MVC project (most of the time), which involves using web services, 
+                                                                writing XML/JSON queries, implementation of security mechanisms</li>
+                                                            <li>Testing and deployment</li>
+                                                        </ul>
+                                                    </li>
                                                 </ul>
                                             </div>
                                         </div>
@@ -137,10 +134,10 @@
                                 <tr>
                                     <td>
                                         <div>
-                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
+                                            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
                                                 <img class="img-responsive" src="http://s.developers.org.ua/img/static/companies/Playtika_logo_new.png" />
                                             </div>
-                                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                                            <div class="col-lg-10 col-md-10 col-sm-10 col-xs-8">
                                                 <p><em><strong>QA Engineer (Slotomania project)</strong></em></p>
                                                 <p><em>Oct 2012 – July 2013</em></p>
                                                 <p>
