--- a/yarmolovichalex-cv/Views/Home/Index.cshtml
+++ b/yarmolovichalex-cv/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
         <div class="container">
             <h3>Yarmolovich Alexander CV</h3>
             <p>
-                <a class="btn btn-primary btn-lg" href="http://gdurl.com/Rddh/download" role="button">Download .docx</a>
+                <a class="btn btn-primary btn-lg" href="https://docs.google.com/uc?export=download&id=0BzhUyayakOb_REx5WE1GRVNjTTQ" role="button">Download .docx</a>
             </p>
         </div>
     </header>
